  cause configure to fail if the requirements for the generator
  build cannot be satisfied anymore.
- External dependencies which can be downloaded via `--with-lib<foo>=download`
  at configure time, can now be provided via `build-config/packages` or
  `--with-package-cache=<path>`. Run `build-config/packages.sh` to list
  all packages and their respective download URL.

Bugfixes:

- Prevent the OMPT adapter from aborting when nested undeferred
  OpenMP tasks report task underflows.
- Enabling the CUDA / HIP adapter together with the OMPT adapter will no
  longer cause a segmentation fault with LLVM 16.0 and newer when OpenMP
  offloading flags are used.
- Ensure that usage of the HIP API from within Score-P does not leave
  lingering last error values.
- Fix memory corruption in cases where the HIP communicator was not
  initialized before unification.

------------------- Released version 8.4 -----------------------------

User tools and API improvements and changes:

- Fixed assignment of functions to the `COM` category in Score-P's scoring tool.
  User wrapped libraries now do induce `COM` along call paths that reach them,
  and Score-P internal regions such as `TRACE BUFFER FLUSH` no longer induce
  `COM`.

Compatibility:

- The classic Intel compilers will now use the flag `-diag-disable=10441`
  to suppress the deprecation warning for each compilation unit.

Bugfixes:

- Fix crash when issuing multiple consecutive split collective IO operations
  on the same file handle.
- Fix linking issues with LLVM based compilers when OpenMP target flags
  are used and the compiler instrumentation is active.
- HIP instrumentation is now consistent with CUDA instrumentation in its
  handling of small rounding errors in device timestamp interpolation and
  will simply adjust the beginning of the next event per stream according
  to the events already seen.
- Fix incorrect communicator attribute in MPI_COLLECTIVE_END events for